# tpcc_generate_data

./: .gitignore  CMakeLists.txt  cmake-variants.yaml  gen.sh
src/: CMakeLists.txt  config.h  generate_data_file.cpp  log.h
